[package]
name = "CWM"
version = "0.0.1"
edition = "2021"

[dependencies]
smithay = { path = "../smithay-master", default-features = false, features = [ "desktop",
    "wayland_frontend", "slog-stdlog", "udev", "winit", "xwayland", "backend_session_logind", "backend_x11", "renderer_gl", "use_system_lib",
    "backend_egl", "renderer_multi", "backend_udev", "backend_libinput", "backend_drm", "backend_gbm", "backend_session", "backend_winit"] }
bitflags = "1.2.1"
input = { version = "0.6.0", features = ["udev"]}
thiserror = "1"
xcursor = "0.3.4"
image = { version = "0.23.14", default-features = false}
fps_ticker = { version = "1.0.0"}
rand = "0.8"
slog = { version = "2.1.1" }
slog-term = "2.8"
slog-async = "2.2"
slog-stdlog = "4.1.0"
slog-scope = "4.4.0"
xkbcommon = "0.4.0"
egl = "0.2.7"

[dependencies.x11rb]
version = "0.9.0"
features = [ "composite" ]