[package]
name = "cwm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcb = { version = "1.1.1", features = ["composite", "glx", "xfixes", "shape"] }
stb_image = "0.2.4"
fast_image_resize = "0.8.0"
rogl = { version = "0.2.1", features=["loaded", "debug", "gl40", "gl33", "gl45"] }
sdl2 = { version = "0.35.2" }